update home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
 <body>
     <app-nav-bar class="NavBar"></app-nav-bar>
     <app-home class="Home" id="Home"></app-home>
+    <app-e class="E" id="E & E"></app-e>
 </body>
 </html>
 
