--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,4 @@
 .NavBar{
     position: fixed;
-}
-
-.Home{
-    margin: 0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    background-color: var(--background-color2);
-    height: calc( 90vh - 5px );
-    max-height: calc( 100vh - 65px);
-    border-bottom-right-radius: 70%;
-    border-bottom-left-radius: 15%;
+    z-index: 1;
 }
