--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,56 +1,98 @@
 div{
-    overflow: hidden;
     width: 98%;
-    height: 100%;
+    height: max(90vh , 585px);
     font-size: max( 60px , 10vw);
     font-weight: 100;
     background-color: #00000070;
-    color: var(--background-color2);
+    color: var(--foreground-color1);
+    opacity: .9;
     text-shadow: 0 0 2px var(--background-color2);
-    margin: 0 1%;
+    margin: max( 60px , 10vh) 1% 0;
     box-shadow: 0 0 10px #00000070;
+    position: relative;
+
+    &::after{
+        content: '';
+        z-index: -1;
+        position: absolute;
+        width: 100vw;
+        height: 110%;
+        top: -10%;
+        left: -1%;
+        background-color: var(--background-color2);
+        border-bottom-right-radius: 70%;
+        border-bottom-left-radius: 15%;
+    }
 
     .title{
-        width: 80%;
-        margin-top: 10vh;
+        font-weight: bold;
+        width: 90%;
+        margin-top: 5vh;
         display: inline-block;
         padding-left: 5vw;
         opacity: 0.8;
+
+        &>span{
+            background-color: var(--foreground-color2-light);
+        }
     }
 
-    .subTitle{
-        color: var(--foreground-color1);
-        margin-top: 3vh;
+    .profile{
+        background-color: var(--foreground-color1);
+        color: var(--background-color1);
+        margin-top: 5%;
         display: block;
-        font-size: 30px;
+        font-size: 20px;
+        width: 40vw;
+        min-width: 220px;
         margin-left: 10vw;
         font-style: italic;
-        z-index: 3;
+        z-index: 0;
+        padding: 5px;
+        position: relative;
+
+        a{
+            font-size: 24px;
+            color: var(--background-color1);
+        }
+
+        &::before{
+            content: "";
+            z-index: -1;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: -9%;
+            left: -7%;
+            background-color: var(--foreground-color2);
+        }
     }
 
     .letterP{
+        background-color: #00000070;
+        border: 3px solid var(--foreground-color1-light);
         z-index: 1;
-        opacity: .8;
-        color: white;
+        opacity: .7;
+        color: var(--foreground-color2);
         font-size: larger;
         font-family: sans-serif;
         position: relative;
         display: inline-block;
-        transform: translateX(80vw) rotateZ(45deg) translateY(-10vh) scale(2) scaleY(2) translateX(-5vw);
+        transform: translateX(80vw) translateY(-20vh) rotateZ(45deg) translateY(-10vh) scale(2) translateX(-5vw);
         animation: anim1 10s infinite;
 
         @keyframes anim1 {
             0%{
-                transform: translateX(80vw) rotateZ(45deg) translateY(-10vh) scale(2) scaleY(2) translateX(-5vw);
+                transform: translateX(80vw) translateY(-20vh) rotateZ(45deg) translateY(-10vh) scale(2) translateX(-5vw);
             }
             50%{
-                transform: translateX(80vw) rotateZ(45deg) translateY(-10vh) scale(2) scaleY(2) translateX(-5vw) translateX(-20px) translateY(-10px);
+                transform: translateX(80vw) translateY(-20vh) rotateZ(45deg) translateY(-10vh) scale(2) translateX(-5vw) translateX(-20px) translateY(-20px);
             }
         }
 
         &::after{
             content: 'P';
-            color: var(--background-color2);
+            color: var(--foreground-color1);
             position: absolute;
             top: 5%;
             left: 5%;
@@ -58,11 +100,20 @@ div{
     }
 
     .shadow{
-        transform: translateX(60vw) translateY(-5vh);
+        transform: translateX(60vw) translateY(-20vh);
         display: inline-block;
         height: 0px;
         width: 25%;
         border-radius: 100%;
-        box-shadow: 0 0 50px 30px #00000090;
+        box-shadow: 0 0 50px 30px #000000f9;
+    }
+}
+
+@media (max-width: 430px){
+    div{
+        .letterP,.shadow{
+            display: none;
+        }
+        
     }
 }
