--- a/src/app/e/e.component.scss
+++ b/src/app/e/e.component.scss
@@ -1,4 +1,113 @@
-p{
-    width: 100vw;
-    height: max-content;
+.E{
+    opacity: .9;
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 1%;
+    row-gap: 1%;
+    color: white;
+    position: relative;
+    
+    .back{
+        z-index: -2;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: block;
+        width: 80vw;
+        height: 90vh;
+        overflow: hidden;
+        
+
+        span{
+            height: 150vh;
+            width: 80px;
+            display: inline-block;
+        }
+
+        span:nth-of-type(1){
+            transform: rotateZ(45deg) translateX(100px);
+            background: var(--foreground-color1);
+        }
+        span:nth-of-type(2){
+            transform: rotateZ(45deg) translateX(200px);
+            background: var(--foreground-color1);
+        }
+        span:nth-of-type(3){
+            transform: rotateZ(45deg) translateX(100px) rotateZ(-90deg);
+            background: var(--foreground-color2);
+        }
+    }
+
+    
+
+    &>div{
+        position: relative;
+        padding: 10px 30px;
+        margin-top: max( calc( 10vh + 80px ) , 140px);
+        height: max-content;
+        min-height: 40%;
+        width: 40%;
+        min-width: 300px;
+        background-color: var(--background-color2);
+        border-top-right-radius: 150px;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 80px;
+
+        &::before{
+            content: attr(id);
+            padding-left: 10px;
+            position: absolute;
+            z-index: -1;
+            margin: 0;
+            left: 0;
+            top: -50px;
+            font-size: 35px;
+            letter-spacing: 2px;
+            width: 95%;
+            min-width: 285px;
+            height: 100%;
+            color: var(--foreground-color2);
+            background-color: var(--background-color1);
+            border: 4px solid var(--foreground-color2);
+            border-top-right-radius: 150px;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 80px;
+        }
+
+        div{
+            margin-bottom: 0;
+            padding: 0 2px 2px 10px;
+            position: relative;
+            z-index: 1;
+            border-left: 3px solid var(--foreground-color2);
+            
+            &::before{
+                content: '';
+                position: absolute;
+                z-index: -1;
+                width: 0;
+                height: 100%;
+                top: 0;
+                left: 0;
+                border-top-right-radius: 50px;
+                border-bottom-right-radius: 50px;
+                background-color: var(--foreground-color2-alpha);
+                transition: width .5s ease-in-out;
+            }
+
+            &:hover{
+                &::before{
+                    width: 100%;
+                }
+            }
+
+            h1{
+                width: 100%;
+                text-align: center;
+                color: var(--foreground-color1);
+            }
+        }
+    }
 }
