--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -55,13 +55,11 @@ nav{
             font-weight: 100;
             position: relative;
             margin-left: 10px;
-            border: 2px solid var(--foreground-color1-light);
+            border: 2px solid var(--foreground-color1);
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
             border-bottom: none;
-            background: linear-gradient(45deg,var(--foreground-color1-light),
-                var(--background-color1),var(--background-color1),
-                var(--background-color1),var(--foreground-color1-light));
+            
 
             &::before{
                 content: '';
