--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,5 +3,5 @@
     <ul class="navItems">
         <li *ngFor="let navItem of navs">{{ navItem }}</li>
     </ul>
-    <!-- <img alt="humbergerIcon" src=""/> -->
+    <img alt="hamburgerIcon" src="assets/hamburgerIcon.png"/>
 </nav>
