--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     <app-nav-bar class="NavBar"></app-nav-bar>
     <app-home class="Home" id="Home"></app-home>
     <app-e class="E" id="E & E"></app-e>
+    <app-projects></app-projects>
 </body>
 </html>
 
