--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <app-nav-bar class="NavBar"></app-nav-bar>
-    <app-home class="Home" id="Home"></app-home>
+    <app-home class="Home" id="HOME"></app-home>
     <app-e class="E" id="E & E"></app-e>
-    <app-projects></app-projects>
+    <app-projects class="Projects" id="PROJECTS"></app-projects>
 </body>
 </html>
 
