--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,10 +1,20 @@
 <div class="projectsPage">
+    <div class="front-stars">
+        <div *ngFor="let number of numbers" class="type{{Rand}}" [ngStyle]="{'left.vw': Random() ,'bottom.px': RandomNeg()}"></div>
+    </div>
+    <div class="middle-stars">
+        <div *ngFor="let number of numbers" class="type{{Rand}}" [ngStyle]="{'left.vw': Random() ,'bottom.px': RandomNeg()}"></div>
+    </div>
+    <div class="far-stars">
+        <div *ngFor="let number of numbers" class="type{{Rand}}" [ngStyle]="{'left.vw': Random() ,'bottom.px': RandomNeg()}"></div>
+    </div>
     <h1>My Projects</h1>
     <div class="projectsContainer">
         <div class="projectCard" *ngFor="let project of projects">
             <a href="{{ project.link }}">
-            <h1 id="{{ project.description }}">{{ project.name | titlecase }}</h1>
-            <p>Tools : {{ project.tools }}</p></a>
+                <h1 id="{{ project.description }}">{{ project.name | titlecase }}</h1>
+                <p>Tools : {{ project.tools }}</p>
+            </a>
         </div>
     </div>
 </div>
