SCL added + modifications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     <app-home class="Home" id="HOME"></app-home>
     <app-e class="E" id="E & E"></app-e>
     <app-projects class="Projects" id="PROJECTS"></app-projects>
+    <app-scl class="Scl" id="SCL"></app-scl>
 </body>
 </html>
 
