--- a/src/app/e/e.component.scss
+++ b/src/app/e/e.component.scss
@@ -1,6 +1,6 @@
 .E{
     opacity: .9;
-    height: max(100vh , max-content);
+    height: max(100% , max-content);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -15,27 +15,27 @@
         bottom: 0;
         left: 0;
         display: block;
-        width: 80vw;
-        height: 90vh;
+        width: 100%;
+        height: 100%;
         overflow: hidden;
         
 
         span{
-            height: 150vh;
+            height: 200%;
             width: 80px;
             display: inline-block;
         }
 
         span:nth-of-type(1){
-            transform: rotateZ(45deg) translateX(100px);
+            transform: rotateZ(45deg);
             background: var(--foreground-color1);
         }
         span:nth-of-type(2){
-            transform: rotateZ(45deg) translateX(200px);
+            transform: rotateZ(45deg) translateX(-200px);
             background: var(--foreground-color1);
         }
         span:nth-of-type(3){
-            transform: rotateZ(45deg) translateX(100px) rotateZ(-90deg);
+            transform: rotateZ(-45deg) translateX(100px);
             background: var(--foreground-color2);
         }
     }
@@ -45,7 +45,7 @@
     &>div{
         position: relative;
         padding: 10px 30px;
-        margin-top: max( calc( 10vh + 80px ) , 140px);
+        margin-top: max( calc( 10% + 80px ) , 140px);
         height: max-content;
         min-height: 40%;
         width: 40%;
@@ -57,7 +57,7 @@
 
         &::before{
             content: attr(id);
-            padding-left: 10px;
+            padding-left: 20px;
             position: absolute;
             z-index: -1;
             margin: 0;
