--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,20 +1,20 @@
 nav{
-    height: 10vh;
+    height: 10%;
     min-height: 60px;
-    width: 100vw;
+    width: 100%;
     background-color: var(--background-color1);
     border-bottom: 5px solid var(--foreground-color1);
     color: var(--foreground-color1);
     position: absolute;
-    z-index: -3;
+    z-index: 2;
     top: 0;
     left: 0;
 
     img{
         position: absolute;
-        right: 2vw;
-        top: 1vh;
-        width: 8vh;
+        right: 2%;
+        top: 1%;
+        width: 8%;
         min-width: 48px;
         cursor: pointer;
         display: none;
