contact section added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
     <app-e class="E" id="E & E"></app-e>
     <app-projects class="Projects" id="PROJECTS"></app-projects>
     <app-scl class="Scl" id="SCL"></app-scl>
+    <app-contact class="Contact" id="CONTACT"></app-contact>
 </body>
 </html>
 
