--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -65,6 +65,8 @@ nav{
             font-weight: 100;
             position: relative;
             margin-left: 10px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
             
 
             &::before{
