--- a/src/app/scl/scl.component.scss
+++ b/src/app/scl/scl.component.scss
@@ -46,7 +46,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, var(--background-color1),#00000000,var(--background-color1));
+            background: linear-gradient(90deg, var(--background-color1), 5%,
+                #00000000, 95%,var(--background-color1));
         }
 
         
@@ -64,7 +65,7 @@
 
             h1{
                 text-align: center;
-                color: var(--foreground-color2);
+                color: var(--foreground-color1);
                 letter-spacing: 2px;
             }
 
@@ -73,7 +74,7 @@
             }
 
             div>h2{
-                color: var(--foreground-color2-alpha);
+                color: var(--foreground-color2);
             }
             div>h3{
                 color: white;
@@ -83,11 +84,11 @@
 
         .moveLeft{
             transition: all .7s;
-            transform: translateX(calc( min( -120% , -325px) + 3px ));
+            transform: translateX(calc( min( -120% , -270px) + 3px ));
         }
         .moveRight{
             transition: all .7s;
-            transform: translateX(calc( max( 120% , 325px) - 3px ));
+            transform: translateX(calc( max( 120% , 270px) - 3px ));
         }
 
     }
