some improvments for ui

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,9 +1,29 @@
 <div class="contactSection">
-    <div class="mainSection">
-        <div class="logo" (click)="GithubClicked()"><img alt="github logo" src="assets/github.png"/></div>
-        <div class="logo" (click)="EmailClicked()"><img alt="email logo" src="assets/email.png"/></div>
-        <div class="logo" (click)="PhoneClicked()"><img alt="phone logo" src="assets/phone.png"/></div>
-        <div class="logo" (click)="LinkedinClicked()"><img alt="linkedin logo" src="assets/linkedin.png"/></div>
+    <div class="title">
+        <h1>C</h1>
+        <h1>O</h1>
+        <h1>N</h1>
+        <h1>T</h1>
+        <h1>A</h1>
+        <h1>C</h1>
+        <h1>T</h1>
     </div>
-    <div class="contact" [ngClass]="showState ? 'showContact' : ''" id="{{ contact }}">{{ contact }}</div>
+    <div class="mainSection">
+        <div class="logo">
+            <img alt="github logo" src="assets/github.png"/>
+            <p>noro129</p>
+        </div>
+        <div class="logo">
+            <img alt="email logo" src="assets/email.png"/>
+            <p>errazi111@gmail.com</p>
+        </div>
+        <div class="logo">
+            <img alt="phone logo" src="assets/phone.png"/>
+            <p>+212694105029</p>
+        </div>
+        <div class="logo">
+            <img alt="linkedin logo" src="assets/linkedin.png"/>
+            <p>Oussama Errazi</p>
+        </div>
+    </div>
 </div>
