--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -2,19 +2,49 @@
     width: 100%;
     height: max-content;
     padding: 10px 0;
-    box-shadow: 0 20px 20px var(--background-color2) inset;
+    box-shadow: 0 1px 1px var(--foreground-color1) inset;
+    position: relative;
+
+    .title{
+        position: absolute;
+        display: flex;
+        margin: 0 0 0 5px;
+        padding: 0;
+        color: var(--foreground-color1);
+        width: 1ch;
+        flex-wrap: wrap;
+
+        >h1{
+            font-size: 20px;
+            display: inline-block;
+            margin: 0;
+            padding: 0;
+        }
+    }
     
     .mainSection{
-        width: max-content;
+        width: 100%;
         margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         .logo{
-            margin: 5px;
-            width: max-content;
+            width: 30ch;
             display: inline-block;
             img{
                 cursor: pointer;
                 width: 40px;
                 height: 40px;
+                margin: 0 auto;
+                display: block;
+                padding-bottom: 10px;
+                border-bottom: 3px solid var(--foreground-color1);
+            }
+            p{
+                font-size: 20px;
+                text-align: center;
+                color: var(--foreground-color1);
+                
             }
         }
 
@@ -28,7 +58,6 @@
         font-size: 30px;
         color: var(--background-color1);
         position: relative;
-        overflow: hidden;
 
         &::after{
             content: attr(id);
@@ -37,15 +66,6 @@
             left: 0;
             width: 100%;
             color: var(--foreground-color1);
-            transform: translateX(100%);
-        }
-    }
-
-    .showContact{
-        
-        &::after{
-            transition: all .7s ease-in;
-            transform: translateX(0);
         }
     }
 }
