--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -27,15 +27,16 @@ div{
         margin-top: max( 12% , 70px );
         display: inline-block;
         padding-left: 5%;
-        opacity: 0.8;
+        // opacity: 0.8;
 
         &>span{
-            background-color: var(--foreground-color2);
+            background-color: var(--foreground-color1-alpha);
         }
     }
 
     .profile{
         background-color: var(--foreground-color1);
+        border: 3px solid var(--foreground-color2);
         color: var(--background-color1);
         margin-top: 5%;
         display: block;
@@ -62,27 +63,27 @@ div{
             top: -9%;
             left: -7%;
             background-color: var(--foreground-color2);
+            border: 3px solid var(--foreground-color1);
         }
     }
 
     .letterP{
-        border: 2px solid var(--foreground-color1);
-        z-index: 1;
+        z-index: -1;
         opacity: .7;
         color: var(--foreground-color2);
         font-size: larger;
         font-family: sans-serif;
         position: relative;
         display: inline-block;
-        transform: translateX(70vw) translateY(-20%) rotateZ(45deg) translateY(-10%) scale(2);
+        transform: translateX(70vw) translateY(-20%) rotateZ(45deg) translateY(-10%) scale(4) translateX(-20px) translateY(-20px);
         animation: anim1 10s infinite;
 
         @keyframes anim1 {
             0%{
-                transform: translateX(70vw) translateY(-20%) rotateZ(45deg) translateY(-10%) scale(2);
+                transform: translateX(70vw) translateY(-20%) rotateZ(45deg) translateY(-10%) scale(4) translateX(-20px) translateY(-20px);
             }
             50%{
-                transform: translateX(70vw) translateY(-20%) rotateZ(45deg) translateY(-10%) scale(2) translateX(-20px) translateY(-20px);
+                transform: translateX(70vw) translateY(-20%) rotateZ(45deg) translateY(-10%) scale(4) translateX(-40px) translateY(-40px);
             }
         }
 
@@ -96,7 +97,7 @@ div{
     }
 }
 
-@media (max-width: 500px){
+@media (max-width: 850px){
     div{
         .letterP{
             display: none;
