--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>{{ title | titlecase }}</title>
 </head>
 <body>
     <app-nav-bar class="NavBar"></app-nav-bar>
     <app-home class="Home" id="HOME"></app-home>
-    <app-e class="E" id="E & E"></app-e>
+    <app-e class="2E" id="2E"></app-e>
     <app-projects class="Projects" id="PROJECTS"></app-projects>
     <app-scl class="Scl" id="SCL"></app-scl>
     <app-contact class="Contact" id="CONTACT"></app-contact>
