--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -13,8 +13,8 @@ nav{
     img{
         position: absolute;
         right: 2%;
-        top: 2%;
-        width: 6%;
+        top: max( 1.5%, 3px);
+        width: min(6% , 55px );
         min-width: 48px;
         cursor: pointer;
         display: none;
@@ -49,7 +49,7 @@ nav{
         }
     }
 
-    ul{
+    .navItems{
         position: absolute;
         right: 0;
         bottom: 0;
@@ -101,21 +101,135 @@ nav{
                     transform: translate(-8px,-8px);
                 }
             }
-
-            &:last-child{
+            &:last-of-type{
+                margin-bottom: -10px;
+                font-family: sans-serif;
+                font-weight: bolder;
+                text-shadow: 0 0 2px;
                 margin-right: 40px;
+                border-radius: 10px;
+                transform: translateY(-10px);
+                color: var(--background-color1);
+                background-color: var(--foreground-color1);
+                border: 2px solid var(--foreground-color1);
+                transition: all .1s ease;
+                &::after,&::before{
+                    content: unset;
+                }
+                &:hover{
+                    box-shadow: 0 0 10px 4px var(--foreground-color1);
+                }
             }
         }
     }
+
+    .navItems_smallerDevices{
+        margin: 0;
+        position: absolute;
+        width: 5%;
+        min-width: 15ch;
+        height: max-content;
+        padding: 10px;
+        top: max( 10% , 60px );
+        right: 0;
+        background-color: var(--background-color1);
+        border-bottom: 2px solid var(--foreground-color1);
+        border-top: 2px solid var(--foreground-color1);
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        opacity: 0;
+        transition: all .5s ease;
+
+        li{
+            cursor: pointer;
+            list-style: none;
+            margin: 10px 0;
+            text-align: center;
+            width: 100%;
+            font-size: 20px;
+            font-weight: 100;
+            transform: translateX(100%);
+            transition: all .7s ease-out;
+        }
+    }
+
+    .showNavBar{
+        opacity: 1;
+        li{
+            transform: translateX(0);
+        }
+    }
+
+    .downloadCV{
+        position: absolute;
+        width: 30%;
+        min-width: 300px;
+        height: 200px;
+        background-color: var(--background-color1);
+        border: 2px solid var(--foreground-color1);
+        border-radius: 10px;
+        top: max( calc(10% + 20px) , 80px );;
+        right: 0;
+        z-index: 2;
+        display: none;
+
+        button{
+            background-color: var(--background-color1);
+            border: 1px solid var(--foreground-color1);
+            font-size: 25px;
+            color: var(--foreground-color1);
+            position: absolute;
+            
+            &::after{
+                content: '';
+                position: absolute;
+                top: 5%;
+                left: 2%;
+                width: 100%;
+                height: 100%;
+                border: 1px solid var(--foreground-color1);
+            }
+        }
+        button:nth-of-type(1){
+            top: 5px;
+            right: 5px;
+        }
+        button:nth-of-type(2){
+            bottom: 20px;
+            right: 20px;
+        }
+        button:nth-of-type(3){
+            bottom: 20px;
+            left: 20px;
+        }
+
+    }
+    .displayDownloadOption{
+        display: block;
+    }
 }
 
-@media (width<=1090px){
+@media (width<=1180px){
     nav{
-        ul{
+        .navItems{
             display: none;
         }
         img{
             display: unset;
+        }
+    }
+}
+
+@media (width<=1406px){
+    nav{
+        .downloadCV{
+            button:nth-of-type(2){
+                left: 20px;
+            }
+            button:nth-of-type(3){
+                bottom: 70px;
+                right: 20px;
+            }
         }
     }
 }
