--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -7,9 +7,10 @@
     &>h1{
         color: var(--foreground-color2);
         text-align: center;
-        font-size: max( 60px , 10%);
-        font-weight: 100;
-        letter-spacing: 3px;
+        font-family: monospace;
+        font-size: max( 70px , 10%);
+        font-weight: bolder;
+        letter-spacing: 1px;
         margin: 0 0 20px 0;
     }
 
@@ -32,13 +33,13 @@
             margin-top: 10px;
             overflow: hidden;
             transition: all .3s ease-in;
-            background: linear-gradient(45deg, var(--foreground-color2-alpha) , 1%,
-                var(--background-color1) , 95%,
-                var(--foreground-color2-alpha));
+            // background: linear-gradient(45deg, var(--foreground-color2-alpha) , 1%,
+            //     var(--background-color1) , 95%,
+            //     var(--foreground-color2-alpha));
             
 
             &:hover{
-                scale: 1.05;
+                // scale: 1.05;
 
                 h1::before{
                     width: 100%;
@@ -67,9 +68,13 @@
             }
 
             h1{
+                position: relative;
                 left: 4%;
                 width: 96%;
+                font-size: 25px;
                 height: min-content;
+                margin: 10px 0 0 0;
+                font-weight: lighter;
                 color: var(--foreground-color1);
 
                 &::before{
@@ -88,9 +93,8 @@
                     color: white;
                     font-size: 30px;
                     font-weight: 300;
-                    height: max-content;
                     position: absolute;
-                    bottom: -3em;
+                    transform: translateY(2ch);
                     left: -100%;
                     width: 97%;
                     transition: all 1s ease-in;
