--- a/src/app/scl/scl.component.scss
+++ b/src/app/scl/scl.component.scss
@@ -7,7 +7,7 @@
 
     .before,.after{
         cursor: pointer;
-        z-index: 2;
+        z-index: 1;
         position: absolute;
         top: 50%;
         height: max-content;
@@ -29,7 +29,7 @@
         margin-left: 10%;
         height: max-content;
         padding-top: 10px;
-        padding-bottom: 5px;
+        padding-bottom: 10px;
         position: relative;
         background: linear-gradient(90deg,#00000000,var(--background-color1),#00000000);
         display: flex;
@@ -58,7 +58,7 @@
             text-align: center;
             border: 3px solid var(--foreground-color2);
             border-radius: 5px;
-            box-shadow: 5px 5px 5px var(--foreground-color2-alpha);
+            box-shadow: 7px 7px 5px var(--foreground-color2-alpha);
             text-align: left;
             padding-left: 10px;
             padding-bottom: 15px;
@@ -67,6 +67,7 @@
                 text-align: center;
                 color: var(--foreground-color1);
                 letter-spacing: 2px;
+                text-shadow: 0 0 5px;
             }
 
             div>*{
