--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,17 @@
 :root{
-    //option1
-    --background-color1: #090909;
-    --background-color2: #191919;
+    //option1 Dark Mode
+    --background-color1: #101015;
+    --background-color2: #121212;
 
     
     --foreground-color1: #fcfcfc;
-    --foreground-color2: #19a2c1;
+    --foreground-color2: #00e5ff;
 
     --foreground-color1-alpha: #fcfcfc70;
-    --foreground-color2-alpha: #19a2c170;
+    --foreground-color2-alpha: #00e5ff70;
     
     /////////////////////////////////////////////////////////////
-    //option2
-    // --background-color1: #000000;
-    // --background-color2: #171717;
-
-    
-    // --foreground-color1: #ffffff;
-    // --foreground-color2: #87bab4;
-
-    // --foreground-color1-alpha: #ffffff;
-    // --foreground-color2-alpha: #87bab470;
+    //option2 Dark Mode
 }
 
 body,html{
