--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,6 +7,12 @@
         <h1>A</h1>
         <h1>C</h1>
         <h1>T</h1>
+        <div>
+            <h1>I</h1>
+            <h1>N</h1>
+            <h1>F</h1>
+            <h1>O</h1>
+        </div>
     </div>
     <div class="mainSection">
         <div class="logo">
