--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -5,20 +5,28 @@
     box-shadow: 0 1px 1px var(--foreground-color1) inset;
     position: relative;
 
-    .title{
+    .title,.title>div{
         position: absolute;
         display: flex;
-        margin: 0 0 0 5px;
+        margin: 0 0 5px 5px;
         padding: 0;
-        color: var(--foreground-color1);
-        width: 1ch;
+        width: min-content;
         flex-wrap: wrap;
 
         >h1{
             font-size: 20px;
             display: inline-block;
-            margin: 0;
+            text-align: center;
+            margin: 0 auto;
             padding: 0;
+            color: var(--foreground-color1);
+            
+        }
+    }
+    .title>div{
+        margin: 10px 0 0 25px;
+        >h1{
+            font-size: 12px;
         }
     }
     
