--- a/src/app/e/e.component.scss
+++ b/src/app/e/e.component.scss
@@ -6,18 +6,18 @@
     justify-content: center;
     column-gap: 1%;
     row-gap: 1%;
-    color: white;
+    color: var(--foreground-color1);
     position: relative;
+    overflow: hidden;
     
     .back{
-        z-index: -2;
+        z-index: -3;
         position: absolute;
         bottom: 0;
         left: 0;
         display: block;
         width: 100%;
         height: 100%;
-        overflow: hidden;
         
 
         span{
@@ -27,16 +27,12 @@
         }
 
         span:nth-of-type(1){
-            transform: rotateZ(45deg);
+            transform: rotateZ(45deg) scaleY(2);
             background: var(--foreground-color1);
         }
         span:nth-of-type(2){
-            transform: rotateZ(45deg) translateX(-200px);
+            transform: rotateZ(45deg) translateX(-200px) scaleY(2);
             background: var(--foreground-color1);
-        }
-        span:nth-of-type(3){
-            transform: rotateZ(-45deg) translateX(100px);
-            background: var(--foreground-color2);
         }
     }
 
@@ -64,7 +60,9 @@
             left: 0;
             top: -50px;
             font-size: 35px;
+            font-weight: bolder;
             letter-spacing: 2px;
+            text-shadow: 0px 0px 4px var(--foreground-color2);
             width: 95%;
             min-width: 285px;
             height: 100%;
