--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,4 +2,5 @@
     <span class="title">Hi<span>,</span> I'<span>m O</span>u<span>ss</span>ama E<span>rra</span>zi</span>
     <span class="profile">I am a second-year software engineering student at <a href="http://ensias.um5.ac.ma/" target="_blank">ENSIAS</a>, driven by a passion for technology and a strong foundation in programming. With a focus on problem-solving and collaboration, I am dedicated to developing innovative solutions and contributing to real-world projects.</span>
     <span class="letterP">P</span>
+    <img alt="splash" src="assets/lines.png"/>
 </div>
