--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -23,8 +23,8 @@ div{
 
     .title{
         font-weight: bold;
-        width: 90%;
-        margin-top: max( 12% , 70px );
+        width: 60%;
+        margin-top: max( 4% , 24px );
         display: inline-block;
         padding-left: 5%;
         // opacity: 0.8;
@@ -69,8 +69,8 @@ div{
 
     .letterP{
         z-index: -1;
-        opacity: .7;
-        color: var(--foreground-color2);
+        opacity: .8;
+        color: var(--foreground-color1);
         font-size: larger;
         font-family: sans-serif;
         position: relative;
@@ -95,12 +95,25 @@ div{
             left: 5%;
         }
     }
+
+    img{
+        z-index: -3;
+        position: absolute;
+        width: 50%;
+        transform: translateX(40vw) translateY(-50vh) rotateZ(45deg);
+    }
 }
 
 @media (max-width: 850px){
     div{
         .letterP{
             display: none;
+        }
+        img{
+            display: none;
+        }
+        .title{
+            width: 90%;
         }
     }
 }
