scroll into view added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
     <title>{{ title | titlecase }}</title>
 </head>
 <body>
-    <app-nav-bar class="NavBar"></app-nav-bar>
-    <app-home class="Home" id="HOME"></app-home>
+    <app-nav-bar class="NavBar" id="HOME"></app-nav-bar>
+    <app-home class="Home"></app-home>
     <app-e class="2E" id="2E"></app-e>
     <app-projects class="Projects" id="PROJECTS"></app-projects>
     <app-scl class="Scl" id="SCL"></app-scl>
