--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,5 +1,5 @@
 .projectsPage{
-    // padding-top: max( calc( 10% + 80px ) , 140px );
+    padding-top: max( 10% , 60px );
     position: relative;
     height: max-content;
     overflow: hidden;
