--- a/src/app/e/e.component.scss
+++ b/src/app/e/e.component.scss
@@ -1,6 +1,8 @@
 .E{
     opacity: .9;
     height: max(100% , max-content);
+    // height: 100%;
+    // min-height: max-content;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -19,20 +21,43 @@
         width: 100%;
         height: 100%;
         
-
+        
         span{
+            position: relative;
             height: 200%;
             width: 80px;
             display: inline-block;
+            background: var(--foreground-color1);
+
+            &::after{
+                content: '';
+                width: 50%;
+                height: 100%;
+                position: absolute;
+                left: 0%;
+                top: 0;
+                display: inline-block;
+                background-color: var(--background-color2);
+                opacity: .5;
+            }
+            
+            &::before{
+                content: '';
+                width: 50%;
+                height: 100%;
+                position: absolute;
+                left: 100%;
+                top: 0;
+                display: inline-block;
+                background-color: var(--background-color2);
+            }
         }
 
         span:nth-of-type(1){
             transform: rotateZ(45deg) scaleY(2);
-            background: var(--foreground-color1);
         }
         span:nth-of-type(2){
             transform: rotateZ(45deg) translateX(-200px) scaleY(2);
-            background: var(--foreground-color1);
         }
     }
 
@@ -50,22 +75,30 @@
         border-top-right-radius: 150px;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 80px;
+        border: 2px solid var(--foreground-color1);
+
+        &:hover{
+            &::before{
+                top: -50px;
+            }
+        }
 
         &::before{
             content: attr(id);
+            transition: all .5s ease;
             padding-left: 20px;
             position: absolute;
             z-index: -1;
             margin: 0;
             left: 0;
-            top: -50px;
+            top: 0px;
             font-size: 35px;
             font-weight: bolder;
             letter-spacing: 2px;
             text-shadow: 0px 0px 4px var(--foreground-color2);
             width: 95%;
             min-width: 285px;
-            height: 100%;
+            height: 90%;
             color: var(--foreground-color2);
             background-color: var(--background-color1);
             border: 4px solid var(--foreground-color2);
